<resources>
    <string name="app_name">SmartPark</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="login">Login</string>
    <string name="createaccount">CreateAccount</string>
    <string name="suggestionaccount">Dont have account?</string>

    <string name="button">Registrar</string>
    <string name="full_name">Full Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
